--- a/brownian-motion.Rmd
+++ b/brownian-motion.Rmd
@@ -29,20 +29,22 @@ for(i in 1:5) {
 ```
 
 ```{definition bm, name="Brownian Motion"}
-**Brownian motion of scale $\alpha$** $\{ B(t); t \geq 0 \}$ is a continuous-time process with the 
+**Brownian motion** $\{ B(t); t \geq 0 \}$ is a continuous-time process with the 
 following properties:
 
 1. The "particle" starts at the origin at $t=0$: $B(0) = 0$.
 2. The displacement over any interval $(s, t)$, denoted by $B(t) - B(s)$, follows a 
 $\text{Normal}(\mu=0, \sigma=\sqrt{\alpha(t - s)})$ distribution.
 3. **Independent increments:** The displacements over non-overlapping intervals are independent.
+
+The parameter $\alpha$ controls the scale of Brownian motion.
 ```
 
 These three properties allow us to calculate most probabilities of interest.
 
-```{example, name="Motion of a Pollen Grain"}
+```{example pollen, name="Motion of a Pollen Grain"}
 The horizontal position of a grain of pollen suspended in water can be modeled by Brownian motion 
-with parameter $\alpha = 4$ mm/s. 
+with scale $\alpha = 4 \text{mm}^2/\text{s}$. 
 
 a. What is the probability the pollen grain moves by more than 10 mm (in the horizontal direction) 
 between 1 and 4 seconds?
@@ -67,7 +69,7 @@ P(|B(4) - B(1)| > 10) &= 2 P(B(4) - B(1) > 10) \\
 \end{align*}
 b. The interval $(0, 1)$ does not overlap with the interval $(1, 4)$. Therefore, by the independent 
 increments property, $B(1) = B(1) - B(0)$ is independent of $B(4) - B(1)$, and 
-\[ P(|B(4) - B(1)| > 10 \big| |B(1)| > 5) = P(|B(4) - B(1)| > 10) = .0039. \]
+\[ P\Big(|B(4) - B(1)| > 10\ \big|\ |B(1)| > 5\Big) = P(|B(4) - B(1)| > 10) = .0039. \]
 ```
 
 ### Brownian Motion as the Limit of a Random Walk {-}
