--- a/ev-continuous.Rmd
+++ b/ev-continuous.Rmd
@@ -100,6 +100,9 @@ Solving for $m$, we see that the median is $-\log(0.5) / \lambda$. (Note: $\log$
 	\end{tikzpicture}
 ```
 
+Formulas for the variance of named continuous distributions can be found 
+in Appendix \@ref(continuous-distributions).
+
 
 ## Essential Practice {-}
 
