--- a/stationary.Rmd
+++ b/stationary.Rmd
@@ -173,14 +173,28 @@ $C[m - n]$ of the difference only, then $C[3, 2]$ would have to equal $C[6, 5]$.
 However, they are not equal: $C[3, 2] = 2 \text{Var}[Z[1]]$, while $C[6, 5] = 5 \text{Var}[Z[1]]$.
 ```
 
+```{example gaussian-process}
+Let $\{ X(t) \}$ be a continuous-time random process with 
+
+- $E[X(t)] = 2$ for all $t$, and
+- $\text{Cov}[X(s), X(t)] = 5e^{-3(s - t)^2}$ for all $s$ and $t$.
+
+The mean function $\mu_X(t) = E[X(t)]$ is constant and 
+the autocovariance function $C_X(s, t) = 5e^{-3(s - t)^2}$ 
+is a function of $\tau = s - t$ only. 
+We can write the autocovariance function as 
+\[ C_X(\tau) = 5e^{-3\tau^2}. \]
+```
+
 
 ## Essential Practice {-}
 
 For these practice questions, you may want to refer to the mean and autocovariance functions you 
 calculated in Lessons \@ref(mean-function) and \@ref(cov-function).
 
-1. Consider a grain of pollen suspended in water, whose horizontal position can be modeled by 
-Brownian motion $\{B(t); t \geq 0\}$ with parameter $\alpha=4 \text{mm}^2/\text{s}$, as in Example \@ref(exm:pollen).
+1. Consider a grain of pollen suspended in water, whose horizontal position can be 
+modeled by Brownian motion $\{B(t); t \geq 0\}$ with parameter 
+$\alpha=4 \text{mm}^2/\text{s}$, as in Example \@ref(exm:pollen).
 Is $\{ B(t); t \geq 0 \}$ wide-sense stationary?
 
 2. Radioactive particles hit a Geiger counter according to a Poisson process 
@@ -196,7 +210,7 @@ at a rate of $\lambda=0.8$ particles per second. Let $\{ N(t); t \geq 0 \}$ repr
 where $\{ Z[n] \}$ is a sequence of i.i.d. standard normal random variables. 
 Is $\{ X[n] \}$ wide-sense stationary?
 
-    (_Hint:_ Consider the following cases: (1) $m = n$, (2) $m = n+1$, (3) $m = n-1$, (4) $m > n+1$, (5) $m < n-1$.)
+    (_Hint:_ You can write $m = n + 1$ as $m - n = 1$.)
     
 4. Let $\Theta$ be a $\text{Uniform}(a=-\pi, b=\pi)$ random variable, and let $f$ be a constant. 
 Define the random phase process $\{ X(t) \}$ by
