--- a/var-continuous.Rmd
+++ b/var-continuous.Rmd
@@ -28,7 +28,8 @@ The standard deviation is also defined in the same way, as the square root of th
 as a way to correct the units of variance..
 \[ \text{SD}[X] = \sqrt{\text{Var}[X]}. \]
 
-Here are two examples where we use the shortcut formula.
+We apply the shortcut formula to derive formulas for the expected values of the 
+uniform and exponential distributions.
 
 ```{example uniform-var, name="Variance of the Uniform Distribution"}
 Let $X$ be a $\text{Uniform}(a, b)$ random variable. We calculated 
@@ -51,6 +52,9 @@ most of the work has already been done.
 &= \frac{1}{\lambda^2}
 \end{align*}
 ```
+
+Formulas for the variance of named continuous distributions can be found 
+in Appendix \@ref(continuous-distributions).
 
 
 ## Essential Practice {-}
