--- a/power.Rmd
+++ b/power.Rmd
@@ -78,5 +78,5 @@ Calculate the expected power in $\{ X[n] \}$.
 Calculate the expected power in $\{ X(t) \}$.
 
 4. Let $\{ X(t) \}$ be a random process with mean function 
-$\mu_X(t) = -2$ and autocovariance function $C_X(s, t) = 5 e^{-0.4|s - t|}$. 
+$\mu_X(t) = -1$ and autocovariance function $C_X(s, t) = 2e^{-|s - t|/3}$. 
 Calculate the expected power of $\{ X(t) \}$.
